fix spacing on projects tab

--- a/CVv2/style.css
+++ b/CVv2/style.css
@@ -194,6 +194,11 @@
     padding: 10px;
     line-height: 25px;
   }
+
+  #projetsContainer li {
+    padding-bottom: 10px;
+  }
+  
   
   @media (prefers-color-scheme: dark) {
     .container {
